--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <!-------------------------------------------------
        Link Favicon
     -------------------------------------------------->
-    <link rel="icon" type="image/png" href="Assets/Images/favicon.png">
+    <link rel="icon" type="image/png" href="assets/images/favicon.png">
 
 
     <!---------------------------------------------------
        Link External Custom Style Sheets
     ----------------------------------------------------->
-    <link rel="stylesheet" href="Css/utils.css">
-    <link rel="stylesheet" href="Css/style.css">
-    <link rel="stylesheet" href="Css/mediaQueries.css">
+    <link rel="stylesheet" href="css/utils.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media-queries.css">
 
 </head>
 
@@ -152,7 +152,7 @@
                     Form Card 2
                 ----------------------------------------------------->
                 <div class="form-card">
-                    <img src="Assets/Images/form-card-1.jpg" alt="building">
+                    <img src="assets/images/form-card-1.jpg" alt="building">
                     <div class="form-card-footer d-flow-root">
                         <span>new york</span>
                         <span>$6,600</span>
@@ -163,7 +163,7 @@
                     Form Card 3
                 ----------------------------------------------------->
                 <div class="form-card">
-                    <img src="Assets/Images/form-card-2.jpg" alt="nature">
+                    <img src="assets/images/form-card-2.jpg" alt="nature">
                     <div class="form-card-footer d-flow-root">
                         <span>paris</span>
                         <span>$4,400</span>
@@ -209,7 +209,7 @@
                         Popular Places Card 1
                     ----------------------------------------------------->
                     <div class="popular-places-card">
-                        <img src="Assets/Images/popular-places-1.jpg" alt="city">
+                        <img src="assets/images/popular-places-1.jpg" alt="city">
 
                         <div class="popular-places-card-content">
                             <h6>The Place of Peace Enjoy</h6>
@@ -231,7 +231,7 @@
                         Popular Places Card 2
                     ----------------------------------------------------->
                     <div class="popular-places-card">
-                        <img src="Assets/Images/popular-places-2.jpg" alt="city">
+                        <img src="assets/images/popular-places-2.jpg" alt="city">
 
                         <div class="popular-places-card-content">
                             <h6>The Place of Heaven</h6>
@@ -253,7 +253,7 @@
                         Popular Places Card 3
                     ----------------------------------------------------->
                     <div class="popular-places-card">
-                        <img src="Assets/Images/popular-places-3.jpg" alt="city">
+                        <img src="assets/images/popular-places-3.jpg" alt="city">
 
                         <div class="popular-places-card-content">
                             <h6>The Place of Gardens</h6>
@@ -275,7 +275,7 @@
                         Popular Places Card 4
                     ----------------------------------------------------->
                     <div class="popular-places-card">
-                        <img src="Assets/Images/popular-places-4.jpg" alt="city">
+                        <img src="assets/images/popular-places-4.jpg" alt="city">
 
                         <div class="popular-places-card-content">
                             <h6>The Place of Paramid</h6>
@@ -352,7 +352,7 @@
                        Popular Packages Card 1
                     ----------------------------------------------------->
                     <div class="popular-packages-card d-flow-root">
-                        <img src="Assets/Images/popular-packages-1.jpg" alt="">
+                        <img src="assets/images/popular-packages-1.jpg" alt="">
 
                         <div class="popular-packages-card-content">
                             <div class="popular-packages-text">
@@ -379,7 +379,7 @@
                        Popular Packages Card 2
                     ----------------------------------------------------->
                     <div class="popular-packages-card d-flow-root">
-                        <img src="Assets/Images/popular-packages-2.jpg" alt="">
+                        <img src="assets/images/popular-packages-2.jpg" alt="">
 
                         <div class="popular-packages-card-content">
                             <div class="popular-packages-text">
@@ -406,7 +406,7 @@
                        Popular Packages Card 3
                     ----------------------------------------------------->
                     <div class="popular-packages-card d-flow-root">
-                        <img src="Assets/Images/popular-packages-3.jpg" alt="">
+                        <img src="assets/images/popular-packages-3.jpg" alt="">
 
                         <div class="popular-packages-card-content">
                             <div class="popular-packages-text">
@@ -433,7 +433,7 @@
                        Popular Packages Card 4
                     ----------------------------------------------------->
                     <div class="popular-packages-card d-flow-root">
-                        <img src="Assets/Images/popular-packages-4.jpg" alt="">
+                        <img src="assets/images/popular-packages-4.jpg" alt="">
 
                         <div class="popular-packages-card-content">
                             <div class="popular-packages-text">
@@ -493,7 +493,7 @@
     <!---------------------------------------------------
        Link External Custom Js Files
    ----------------------------------------------------->
-    <script src="Js/script.js"></script>
+    <script src="js/script.js"></script>
 
 
     <!---------------------------------------------------
